--- a/InitialValueProblem.csproj
+++ b/InitialValueProblem.csproj
@@ -62,6 +62,9 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Solver.cs" />
     <Compile Include="Farm.cs" />
+    <Compile Include="SolverTabPage.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <EmbeddedResource Include="InitialValueProblemView.resx">
       <DependentUpon>InitialValueProblemView.cs</DependentUpon>
     </EmbeddedResource>
